# death_by_deaf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_mac.sh  build_win.bat  conf_gnu.sh  conf_mac.sh  config_win.bat  engine  lua_motif  main.cpp  mappings.json  package-lock.json  package.json  run.sh  run_mac.sh  run_win.bat  saved.json  webpack.config.js
config/: def_controls.json  saved.json
include/: audio.hpp  deaf.hpp  deaf_audio.hpp  deaf_lua.hpp  deaf_utils.hpp  deaf_vtypes.hpp  test_audio.hpp  types.hpp
lib/arm/: liblua5.3.so.0.0.0  libluajit-5.1.so.2  librtaudio.so.6  librtmidi.so.4
scripts/: _init.lua  _loader.lua  main.lua  midi.lua  screen2.lua  screen3.lua  screen_root.lua
src/: audio.cpp  calls.cpp  controls.js  deaf_audio.cpp  deaf_luatypes.cpp  deaf_video.cpp  deaf_vtypes.cpp  editor.js  index.html  index.js  level.json  main.cpp  scene.js  snippets.txt  styles.css  test.cpp  test_audio.cpp
src/cpp/: deaf_luatypes.cpp
src/gfx/models/: dungeon_tiles.blend  dungeon_tiles.blend1
src/gfx/src/: door.blend1  door_suv.xcf  vig.xcf
src/models/: dungeon_tiles.glb
test_sesh.motif/: manifest.json
utils/: ui.lua
